src/core/tests/data/invalid/attr/spc.rsk


[SPC-invalid]
text = "This has an invalid attribute"
ref = ["valid refs, invalid name"]


[SPC-valid]
text = "this is actually valid"
